--- a/Modules/ResponseApi/composer.json
+++ b/Modules/ResponseApi/composer.json
@@ -9,7 +9,9 @@
     ],
     "extra": {
         "laravel": {
-            "providers": [],
+            "providers": [
+                "Modules\\ResponseApi\\Providers\\ResponseApiServiceProvider"
+            ],
             "aliases": {
 
             }
